<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.github.tix320</groupId>
	<artifactId>jouska</artifactId>
	<version>2.3.3</version>
	<packaging>pom</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<sonder.version>0.20.2-SNAPSHOT</sonder.version>
	</properties>

	<modules>
		<module>jouska-core</module>
		<module>jouska-client</module>
		<module>jouska-server</module>
		<module>jouska-bot</module>
		<module>jouska-ci</module>
	</modules>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>com.github.tix320</groupId>
			<artifactId>kiwi</artifactId>
			<version>0.21.1-SNAPSHOT</version>
		</dependency>
	</dependencies>

</project>
